Add tls to docker route

--- a/nexus-operator/base/docker-repository-route.yaml
+++ b/nexus-operator/base/docker-repository-route.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   port:
     targetPort: docker
+  tls:
+    termination: edge
   to:
     kind: Service
     name: docker-repository
